# trust-service

./: .dockerignore  .env  .gitignore  .mongo.env  Dockerfile  README.md  cargo.toml  docker-compose.yml
.github/workflows/: build-push-gar.yml
abigen/: Cargo.toml
abigen/src/: main.rs
actix-server/: .env  .gitignore  .mongo.env  Cargo.toml  Dockerfile  docker-compose.yml
actix-server/api/: Trust-service.postman_collection.json  specifications.yaml  test-api.http
actix-server/src/: dtos.rs  errors.rs  keycloak.rs  lib.rs  main.rs  storage.rs  utils.rs
actix-server/src/contracts/: mod.rs
actix-server/src/controllers/: did_controller.rs  log_controller.rs  mod.rs  nft_controller.rs  proof_controller.rs
actix-server/src/dtos/: mod.rs  proof_dto.rs
actix-server/src/models/: asset.rs  log_model.rs  mod.rs  proof.rs  tangle_proof.rs  trustproof.rs  user.rs
actix-server/src/services/: did_service.rs  iota_state.rs  ipfs.rs  mod.rs  mongodb_repo.rs  proof_service.rs
actix-server/test/: common.rs  integration_test.rs
data/ipfs/: config
data/ipfs/blocks/: diskUsage.cache
data/ipfs/blocks/DJ/: CIQG6N4NJ6LLLUUNUHHWETRKXBBR6E3OIOD4PSJMJO7NBMAB2IUIDJA.data
data/ipfs/blocks/MX/: CIQFNFJBO7MMBL7GRWKOV5E3ETL2GJ5NVBOQX2RWPDASJJT7RQOZMXY.data
data/ipfs/datastore/: 000028.ldb  000031.ldb  LOG  MANIFEST-000030
datastore/: 000002.ldb  LOG  MANIFEST-000008
ipfs/data/ipfs/: config
ipfs/data/ipfs/blocks/: diskUsage.cache
ipfs/data/ipfs/blocks/IN/: CIQPPRTLDQADLVJNLQK347YH5BDOIM6MVFTRQ3QWYMYW2WKXYUVJINA.data
ipfs/data/ipfs/blocks/MS/: CIQAZ25JTIYJMXADCVT4NKT74NLFQPUICMJZ3I45QSVCFYZQ23ENMSI.data
ipfs/data/ipfs/datastore/: 000002.ldb  LOG  MANIFEST-000008
server/: Dockerfile  package-lock.json  package.json
server/api/: openapi.yaml
server/src/: index.ts
server/src/controllers/: TrustProofs.ts
server/src/models/: TrustProof.ts
server/src/routes/: Api.ts
server/src/services/: TrustProofs.ts
server/src/utils/: writer.ts
smart-contracts/: Asset.json  AssetFactory.json
trust-proof/: Cargo.toml
trust-proof/src/: lib.rs  main.rs  trustproof.rs
