[package]
name = "actix-trust-service"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Fondazione LINKS" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.164", features = ["derive"] }
anyhow = "1.0.71"
tokio = { version = "1.20.1", default-features = false, features = ["rt"] }
iota-sdk = { version = "1.1.2", features = ["stronghold", "rocksdb"]}
identity_iota = { version = "1.0.0", features = ["memstore"]}
identity_eddsa_verifier = "1.0.0"
identity_stronghold = "1.0.0"
iota-crypto = {version = "0.23.0", default-features = false, features = ["ed25519", "random", "blake2b"]}
mongodb = "2.6.0"
serde_json = "1.0.100"
aes-gcm = "0.10.2"
base64 = "0.21.0"
env_logger = "0.10.0"
thiserror = "1.0.50"
reqwest = "0.11.22"
ethers = { version = "2.0.8", features = ["legacy"] }
actix-multipart = "0.7.2"
ipfs-api-backend-actix = "0.7.0"
futures-util = "0.3.30"
deranged = { version = ">=0.4.0, <0.4.1", default-features = false }

[lib]
name = "trust_server"
path = "src/lib.rs"


[[bin]]
name = "gen-key"
path = "src/bin/key_gen.rs"

[[bin]]
name = "gen-mnemonic"
path = "src/bin/new_wallet.rs"
